--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mux/mux-video-react": "^0.7.15",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "cookies-next": "^4.0.0",
     "country-dropdown-with-flags-for-react": "^1.1.4",
     "dynamic": "^4.2.2",
+    "form-data": "^4.0.0",
+    "FormData": "^0.10.1",
     "gsap": "^3.12.2",
+    "html-react-parser": "^5.0.6",
     "jquery": "^3.7.0",
     "leaflet": "^1.9.4",
     "lg-fullscreen": "^1.2.1",
     "mdb-react-ui-kit": "^5.1.0",
     "next": "13.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "rc-slider": "^10.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -35,6 +42,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-phone-number-input": "^3.2.19",
     "react-plock": "^3.0.2",
+    "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "react-stars": "^2.2.5",
     "react-switch": "^7.0.0",
