--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/error-message": "^2.0.1",
     "@mux/mux-video-react": "^0.7.15",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.7",
@@ -38,7 +39,9 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-input-mask": "^2.0.4",
     "react-owl-carousel": "^2.3.3",
     "react-phone-number-input": "^3.2.19",
     "react-plock": "^3.0.2",
