--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
+    "react-otp-input": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-phone-number-input": "^3.2.19",
     "react-plock": "^3.0.2",
