--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/error-message": "^2.0.1",
     "@mux/mux-video-react": "^0.7.15",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "bootstrap": "^5.2.3",
@@ -42,6 +43,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
+    "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-phone-number-input": "^3.2.19",
