--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.2.1",
     "cookies-next": "^4.0.0",
     "country-dropdown-with-flags-for-react": "^1.1.4",
+    "crypto-js": "^4.2.0",
     "dynamic": "^4.2.2",
     "form-data": "^4.0.0",
     "FormData": "^0.10.1",
@@ -46,7 +47,6 @@
     "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
-    "react-phone-number-input": "^3.2.19",
     "react-plock": "^3.0.2",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
