--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
+    "react-paystack": "^4.0.3",
     "react-plock": "^3.0.2",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
