--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-otp-input": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-paystack": "^4.0.3",
+    "react-places-autocomplete": "^7.3.0",
     "react-plock": "^3.0.2",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
