--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet": "^1.9.4",
     "lg-fullscreen": "^1.2.1",
     "mdb-react-ui-kit": "^5.1.0",
+    "moment": "^2.30.1",
     "next": "13.2.1",
     "nextjs-progressbar": "^0.0.16",
     "rc-slider": "^10.3.1",
