--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mdb-react-ui-kit": "^5.1.0",
     "moment": "^2.30.1",
     "next": "13.2.1",
+    "next-share": "^0.27.0",
     "nextjs-progressbar": "^0.0.16",
     "rc-slider": "^10.3.1",
     "react": "^18.2.0",
