--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
